--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </div>
                 <div class="hire_bar">
                   <a href="#contact" class="btnn-primary btnn">Hire me</a>
-                  <a href="assets/PatrickLuanResume.pdf" download class="btnn-border-dark btnn Download" target="_blank">Download Cv</a>
+                  <a href="assets/PATRICK LUAN.pdf" download class="btnn-border-dark btnn Download" target="_blank">Download Cv</a>
                 </div>
               </div>
               <div class="srolll-drwn">
