--- a/index.html
+++ b/index.html
@@ -233,21 +233,104 @@
                   </p>
                 </div>
                 <div id="c_career">
-                  <h5>My Career </h5>
-                  <p>Hi! I'm Patrick Luan, experienced Full Stack Developer with 7 years in designing, developing, and integrating AI-powered applications, cloud
-                    infrastructure, and scalable web solutions. Successfully optimized AI retrieval systems, increasing efficiency by 40% and cutting
-                    deployment cycles by 60%. Skilled in full-stack development, AI model orchestration, and cloud automation, with experience
-                    building and maintaining applications
-                  </p>
+                  <h5>Experience</h5>
+                  <div style="display: flex; flex-direction: column; padding: 5px;">
+                    <div>
+                      <p style="margin: 0px; padding: 0px; padding-bottom: 5px;"><b style="color:#29d882; font-size: large;">Chili Piper</b> - New York, United States</p>
+                      <p><spin style="color: #222;">Full Stack Developer</spin>(Remote) | Apr 2022 - Oct 2024</p>
+                    </div>
+                    <div>
+                      <p style="margin: 0px; padding: 0px; padding-bottom: 5px;"><b style="color:#29d882; font-size: large;">Chili Piper</b> - New York, United States</p>
+                      <p><spin style="color: #222;">Junior Software Developer</spin>(Remote) | Jun 2021 - Mar 2022</p>
+                    </div>
+                    <div>
+                      <p style="margin: 0px; padding: 0px; padding-bottom: 5px;"><b style="color:#29d882; font-size: large;">VINOVA</b> - Singapore, Singapore</p>
+                      <p><spin style="color: #222;">Back End Developer</spin>(On-Site) | Nov 2019 - May 2021</p>
+                    </div> 
+                    <div>
+                      <p style="margin: 0px; padding: 0px; padding-bottom: 5px;"><b style="color:#29d882; font-size: large;">Atta Systems</b> - Singapore, Singapore</p>
+                      <p><spin style="color: #222;">Front End Developer</spin>(On-Site) | Nov 2018 - Oct 2019</p>
+                    </div>
+                  </div>
+                  <h5>Education</h5>
+                  <div style="display: flex; flex-direction: column; padding: 5px;">
+                    <div>
+                      <p style="margin: 0px; padding: 0px; padding-bottom: 5px;"><b style="color:#29d882; font-size: large;">Nanyang Technological University</b> <br> Singapore, Singapore</p>
+                      <p><spin style="color: #222;">Bachelor Degree in Computer Science</spin> <br> Apr 2014 - Oct 2018</p>
+                    </div>
+                  </div>
                 </div>
                 <div id="c_skills">
-                  <h5>Skills </h5>
-                  <p>Hi! I'm Patrick Luan, experienced Full Stack Developer with 7 years in designing, developing, and integrating AI-powered applications, cloud
-                    infrastructure, and scalable web solutions. Successfully optimized AI retrieval systems, increasing efficiency by 40% and cutting
-                    deployment cycles by 60%. Skilled in full-stack development, AI model orchestration, and cloud automation, with experience
-                    building and maintaining applications
-                  </p>
-                </div>
+                  <h5>Programming Language</h5>
+                  <div class="skills-container">
+                      <span class="skill-box">JavaScript</span>
+                      <span class="skill-box">TypeScript</span>
+                      <span class="skill-box">Python</span>
+                      <span class="skill-box">C++</span>
+                      <span class="skill-box">C#</span>
+                  </div>
+                  <h5>Frontend</h5>
+                  <div class="skills-container">
+                      <span class="skill-box">HTML5</span>
+                      <span class="skill-box">CSS3</span>
+                      <span class="skill-box">React.js</span>
+                      <span class="skill-box">Vue.js</span>
+                      <span class="skill-box">Angular</span>
+                      <span class="skill-box">Next.js</span>
+                  </div>
+                  <h5>UI/UX Frameworks & Libraries</h5>
+                  <div class="skills-container">
+                      <span class="skill-box">Tailwind CSS</span>
+                      <span class="skill-box">Bootstrap</span>
+                      <span class="skill-box">Material UI</span>
+                      <span class="skill-box">Ant Design</span>
+                  </div>
+                  <h5>Backend Development</h5>
+                  <div class="skills-container">
+                      <span class="skill-box">Node.js</span>
+                      <span class="skill-box">Express.js</span>
+                      <span class="skill-box">Django</span>
+                      <span class="skill-box">Flask</span>
+                      <span class="skill-box">ASP.net</span>
+                      <span class="skill-box">FastAPI</span>
+                  </div>
+                  <h5>Databases</h5>
+                  <div class="skills-container">
+                      <span class="skill-box">MongoDB</span>
+                      <span class="skill-box">MySQL</span>
+                      <span class="skill-box">PostgreSQL</span>
+                      <span class="skill-box">Firebase</span>
+                      <span class="skill-box">Redis</span>
+                      <span class="skill-box">Azure</span>
+                      <span class="skill-box">Cosmos DB</span>
+                  </div>
+                  <h5>Cloud & DevOps</h5>
+                  <div class="skills-container">
+                      <span class="skill-box">AWS Lambda</span>
+                      <span class="skill-box">Docker</span>
+                      <span class="skill-box">Kubernetes</span>
+                      <span class="skill-box">GitHub Actions</span>
+                      <span class="skill-box">Jenkins</span>
+                      <span class="skill-box">Google Cloud Platform</span>
+                  </div>
+                  <h5>AI & LLMs</h5>
+                  <div class="skills-container">
+                      <span class="skill-box">OpenAI API</span>
+                      <span class="skill-box">Claude</span>
+                      <span class="skill-box">Hugging Face</span>
+                      <span class="skill-box">LangChain</span>
+                      <span class="skill-box">RAG</span>
+                      <span class="skill-box">Vector Database</span>
+                      <span class="skill-box">AI Integration</span>
+                      <span class="skill-box">Prompt Engineering</span>
+                  </div>
+                  <h5>Testing & Automation</h5>
+                  <div class="skills-container">
+                      <span class="skill-box">Jest</span>
+                      <span class="skill-box">Mocha</span>
+                      <span class="skill-box">Supertest</span>
+                  </div>
+              </div>
               </div>
             </div>
           </div>
