--- a/index.html
+++ b/index.html
@@ -593,6 +593,34 @@
                 </div>
             </div>
           </div>
+          <div class="project-card">
+            <div class="media-container">
+              <video class="project-video" muted playsinline>
+                  <source src="./assets/portfolio/6.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+              </video>
+            </div>
+            <div class="project-content">
+                <h3 class="project-title">Project Name</h3>
+                <p class="project-description">
+                    A brief description of the project goes here. Explain what it does, technologies used, and its purpose.
+                </p>
+                <h4 class="project-role">My Role</h4>
+                <p class="role-description">Frontend Developer - Built UI components and integrated APIs.</p>
+                <h4 class="project-skills">Skills Used</h4>
+                <div class="skills-list">
+                    <span class="skill-box">React.js</span>
+                    <span class="skill-box">Node.js</span>
+                    <span class="skill-box">MongoDB</span>
+                    <span class="skill-box">AWS</span>
+                </div>
+                <div class="project-links">
+                  <a href="#" class="project-btn">
+                      <span class="arrow-icon">&#8599;</span>
+                  </a>
+                </div>
+            </div>
+          </div>
         </div>
       </div>
         </div>
